# test-runner

./: .clang-format  CMakeLists.txt
include/: elementwise.h  log.h  state_transition_impl.h  task.h  task_manager_impl.h  test_runner.h
src/: main.cpp
src/elementwise/: elementwise.cpp
src/task/: state_transition_impl.cpp  task_impl.cpp  task_impl.h  task_manager_impl.cpp  task_manager_impl.h
src/test_runner/: benchmark.cpp  validation.cpp
